# solana-cli

./: Cargo.toml  README.md
src/: client.rs  error.rs  main.rs  utils.rs
