[package]
name = "solana-cli"
description = "Solana Broxus Command-line Utility"
authors = ["Broxus team"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
clap = "2.33.3"
console = "0.14.0"
home = "0.5.3"
indicatif = "0.16.2"
solana-clap-utils = "1.9"
solana-client = "1.9"
solana-program = "1.9"
solana-sdk = "1.9"
thiserror = "1.0"
yaml-rust = "0.4"

[[bin]]
name = "solana-cli"
path = "src/main.rs"
