[package]
name = "solana-cli"
description = "Solana Broxus Command-line Utility"
authors = ["Broxus team"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
borsh = "0.9"
clap = "2.33.3"
console = "0.14.0"
home = "0.5.3"
thiserror = "1.0"
yaml-rust = "0.4"

solana-clap-utils = "=1.9.28"
solana-client = "=1.9.28"
solana-program = "=1.9.28"
solana-sdk = "=1.9.28"

solana-bridge = { version = "0.1", git = "ssh://git@gitlab.dexpa.io/solana-everscale-bridge/solana-bridge" }


[[bin]]
name = "solana-cli"
path = "src/main.rs"
