[package]
name = "solana-cli"
description = "Solana Broxus Command-line Utility"
authors = ["Broxus team"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
borsh = "0.10"
clap = "2.33.3"
console = "0.15"
home = "0.5.3"
thiserror = "1.0"
yaml-rust = "0.4"

solana-clap-utils = "1.16"
solana-client = "1.16"
solana-program = "1.16"
solana-sdk = "1.16"

solana-bridge = { version = "0.1", git = "https://github.com/broxus/octusbridge-solana-contracts.git" }


[[bin]]
name = "solana-cli"
path = "src/main.rs"
